--- a/q/274087.html
+++ b/q/274087.html
@@ -26,47 +26,21 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>119</td><td>R</td><td>240712T092046Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274124#274124">Dominic </a></td></tr>
-<tr d-ix="1"><td>058</td><td>APLDyalog Unicode</td><td>240712T053759Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274116#274116">akamayu</a></td></tr>
-<tr d-ix="2"><td>064</td><td>Python</td><td>240711T190654Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274093#274093">Albert.L</a></td></tr>
-<tr d-ix="3"><td>152</td><td>Ruby</td><td>240711T210954Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274100#274100">Level Ri</a></td></tr>
+<tr d-ix="0"><td>142</td><td>Ruby</td><td>240711T210954Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274100#274100">Level Ri</a></td></tr>
+<tr d-ix="1"><td>119</td><td>R</td><td>240712T092046Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274124#274124">Dominic </a></td></tr>
+<tr d-ix="2"><td>058</td><td>APLDyalog Unicode</td><td>240712T053759Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274116#274116">akamayu</a></td></tr>
+<tr d-ix="3"><td>064</td><td>Python</td><td>240711T190654Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274093#274093">Albert.L</a></td></tr>
 <tr d-ix="4"><td>062</td><td>Wolfram Language Mathematica</td><td>240711T192306Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274094#274094">Sanguine</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a>, <s>139</s> <s>132</s> 119 bytes</h1>
-<p>(or 98 bytes in <strong>R</strong> ≥ 4.1 by replacing 3x <code>function</code> keywords for <code>\</code>).</p>
-<p><em>Edit: no longer requiring <code>r</code>adius to be given as an input saves 13 bytes.</em></p>
+<div id="pu0" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 142 bytes</h1>
 
-<pre class="lang-r prettyprint-override"><code>function(n,i=1:396/99-2,v=1i^(1:n*4/n),R=abs(1-v[n/2]),`~`=sapply)image(i~function(x)i~function(y)all(abs(x+y*1i-v)&lt;R))
+<pre class="lang-ruby prettyprint-override"><code>-&gt;n{s='&lt;svg viewBox=&quot;-50-50 99 99&quot;&gt;&lt;path d=&quot;M40 0'
+n.times{|j|s&lt;&lt;&quot;A#{r=40/(k=1i**(1.0/n)).imag} #{r} 0 0,0 %f %f&quot;%(40*k**(4*~j)).rect}
+s+'&quot;&gt;'}
 </code></pre>
-<p><a href="https://rdrr.io/snippets/embed/?code=reuleaux%3D%0Afunction(n%2Ci%3D1%3A396%2F99-2%2Cv%3D1i%5E(1%3An*4%2Fn)%2CR%3Dabs(1-v%5Bn%2F2%5D)%2C%60%7E%60%3Dsapply)image(i%7Efunction(x)i%7Efunction(y)all(abs(x%2By*1i-v)%3CR))%0A%0Areuleaux(3)%0Areuleaux(5)%0A" rel="nofollow noreferrer">Try it at rdrr.io</a></p>
-<p><a href="https://i.sstatic.net/2w4U96M6.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/2w4U96M6.png" alt="enter image description here" /></a></p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup>58 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
-<p>A dfn that takes the number of edges and outputs a bitmap of the shape.</p>
-<pre><code>{(C-C⊖⍨⌈⍵÷2)∧.&gt;⍥|C∘.-B←I∘.+0J1×I←40÷⍨¯41+⍳81⊣C←¯1*⍵÷⍨+⍨⍳⍵}
-</code></pre>
-<p>It uses complex numbers to encode points on the 2D plane.</p>
-<pre><code>{(C-C⊖⍨⌈⍵÷2)∧.&gt;⍥|C∘.-B←I∘.+0J1×I←40÷⍨¯41+⍳81⊣C←¯1*⍵÷⍨+⍨⍳⍵}
-                                             C←¯1*⍵÷⍨+⍨⍳⍵  ⍝ vertces
-                     B←I∘.+0J1×I←40÷⍨¯41+⍳81               ⍝ points on the plane
-                 C∘.-B                                     ⍝ displacement vectors to the vertices
- (C-C⊖⍨⌈⍵÷2)                                               ⍝ displacement vectors between oppisite vertices
-            ∧.&gt;⍥|                                          ⍝ are the points within the reuleaux polygon
-</code></pre>
-<p><a href="https://razetime.github.io/APLgolf/?h=AwA&amp;c=q9Zw1nV@1DXtUe@KRz0dj3q3Ht5upPmoY7me3aPepTXOjzpm6Ok6PWqb4AliaRt4GR6e7gnkmhgc3g7Ucmi9iaH2o97NFoaPuhY7A8UPrTfUAhsClNQGmdm7GcitBQA&amp;f=S3/UNqHaSF9dT1k92lD7Ue/W2FqFR71zFUryFdLyi3ITSxRKMlIVkjJLchMLuNIV0hSMwaQpmDQHk5ZcAA&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf!</a></p>
-</div>
-<div id="pu2" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 64 bytes</h1>
-<pre class="lang-python prettyprint-override"><code>from turtle import*
-def f(n,d):
- for c in[0,d]*n:circle(c,180/n)
-</code></pre>
-<p><a href="https://ato.pxeger.com/run?1=m72soLIkIz9vwYKlpSVpuhY3HdKK8nMVSkqLSnJSFTJzC_KLSrS4UlLTFNI08nRSNK24FNLyixSSFTLzog10UmK18qySM4uSc1I1knUMLQz08zQh5kCNgxkLAA" rel="nofollow noreferrer">ATO Does not work for this (missing <code>_tkinter</code>)!</a>
-Nor does TIO.</p>
-<p>History: 80,82,64.</p>
-<h2>How?</h2>
-<p>Observing that the arc lengths always sum to half a full circle we let the turtle draw a circle omitting every other of a total of <span class="math-container">\$2n\$</span> equal length arcs</p>
-</div>
-<div id="pu3" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 152 bytes</h1>
+<p><a href="https://tio.run/##DcvRCoIwGIbhc6/iZyHTlTppHQibUOddQXRgpTZFEzet0HXra/Ccfe83TrevrYSN8n5RAnM11zDL8n16fQSKDtSBLHNQzodCP@Eh0JlRoNjrYy27Ui1rsyrO0XGzjILRJGhFKgkJ0pgmfRjGsitqA2404G47Cn7lID9glLSuY@TXuGws79p4aotRjo0dJq2guuyv9g8" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
+<p>Golf in progress. update to follow.</p>
+<h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, 152 bytes</h1>
 
 <pre class="lang-ruby prettyprint-override"><code>-&gt;n{s='&lt;svg viewBox=&quot;-50-50 99 99&quot;&gt;&lt;path d=&quot;M40 0'
 n.times{|j|x,y=(40*1i**(4.0/n*~j)).rect
@@ -81,6 +55,40 @@ s+'&quot;&gt;'}
 </div>
 </div>
 </p>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a>, <s>139</s> <s>132</s> 119 bytes</h1>
+<p>(or 98 bytes in <strong>R</strong> ≥ 4.1 by replacing 3x <code>function</code> keywords for <code>\</code>).</p>
+<p><em>Edit: no longer requiring <code>r</code>adius to be given as an input saves 13 bytes.</em></p>
+
+<pre class="lang-r prettyprint-override"><code>function(n,i=1:396/99-2,v=1i^(1:n*4/n),R=abs(1-v[n/2]),`~`=sapply)image(i~function(x)i~function(y)all(abs(x+y*1i-v)&lt;R))
+</code></pre>
+<p><a href="https://rdrr.io/snippets/embed/?code=reuleaux%3D%0Afunction(n%2Ci%3D1%3A396%2F99-2%2Cv%3D1i%5E(1%3An*4%2Fn)%2CR%3Dabs(1-v%5Bn%2F2%5D)%2C%60%7E%60%3Dsapply)image(i%7Efunction(x)i%7Efunction(y)all(abs(x%2By*1i-v)%3CR))%0A%0Areuleaux(3)%0Areuleaux(5)%0A" rel="nofollow noreferrer">Try it at rdrr.io</a></p>
+<p><a href="https://i.sstatic.net/2w4U96M6.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/2w4U96M6.png" alt="enter image description here" /></a></p>
+</div>
+<div id="pu2" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup>58 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
+<p>A dfn that takes the number of edges and outputs a bitmap of the shape.</p>
+<pre><code>{(C-C⊖⍨⌈⍵÷2)∧.&gt;⍥|C∘.-B←I∘.+0J1×I←40÷⍨¯41+⍳81⊣C←¯1*⍵÷⍨+⍨⍳⍵}
+</code></pre>
+<p>It uses complex numbers to encode points on the 2D plane.</p>
+<pre><code>{(C-C⊖⍨⌈⍵÷2)∧.&gt;⍥|C∘.-B←I∘.+0J1×I←40÷⍨¯41+⍳81⊣C←¯1*⍵÷⍨+⍨⍳⍵}
+                                             C←¯1*⍵÷⍨+⍨⍳⍵  ⍝ vertces
+                     B←I∘.+0J1×I←40÷⍨¯41+⍳81               ⍝ points on the plane
+                 C∘.-B                                     ⍝ displacement vectors to the vertices
+ (C-C⊖⍨⌈⍵÷2)                                               ⍝ displacement vectors between oppisite vertices
+            ∧.&gt;⍥|                                          ⍝ are the points within the reuleaux polygon
+</code></pre>
+<p><a href="https://razetime.github.io/APLgolf/?h=AwA&amp;c=q9Zw1nV@1DXtUe@KRz0dj3q3Ht5upPmoY7me3aPepTXOjzpm6Ok6PWqb4AliaRt4GR6e7gnkmhgc3g7Ucmi9iaH2o97NFoaPuhY7A8UPrTfUAhsClNQGmdm7GcitBQA&amp;f=S3/UNqHaSF9dT1k92lD7Ue/W2FqFR71zFUryFdLyi3ITSxRKMlIVkjJLchMLuNIV0hSMwaQpmDQHk5ZcAA&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf!</a></p>
+</div>
+<div id="pu3" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 64 bytes</h1>
+<pre class="lang-python prettyprint-override"><code>from turtle import*
+def f(n,d):
+ for c in[0,d]*n:circle(c,180/n)
+</code></pre>
+<p><a href="https://ato.pxeger.com/run?1=m72soLIkIz9vwYKlpSVpuhY3HdKK8nMVSkqLSnJSFTJzC_KLSrS4UlLTFNI08nRSNK24FNLyixSSFTLzog10UmK18qySM4uSc1I1knUMLQz08zQh5kCNgxkLAA" rel="nofollow noreferrer">ATO Does not work for this (missing <code>_tkinter</code>)!</a>
+Nor does TIO.</p>
+<p>History: 80,82,64.</p>
+<h2>How?</h2>
+<p>Observing that the arc lengths always sum to half a full circle we let the turtle draw a circle omitting every other of a total of <span class="math-container">\$2n\$</span> equal length arcs</p>
 </div>
 <div id="pu4" class="pu"><h1><a href="https://www.wolfram.com/wolframscript/" rel="nofollow noreferrer">Wolfram Language (Mathematica)</a>, 62 bytes</h1>
 <pre><code>Graphics[ResourceFunction[&quot;ReuleauxPolygon&quot;][Input[],Input[]]]
