--- a/q/274051.html
+++ b/q/274051.html
@@ -26,49 +26,15 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>183</td><td>Python 3.8 prerelease</td><td>240710T191252Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274062#274062">squarero</a></td></tr>
-<tr d-ix="1"><td>150</td><td>Ruby</td><td>240710T194631Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274063#274063">Level Ri</a></td></tr>
-<tr d-ix="2"><td>176</td><td>JavaScript ES6</td><td>240710T124848Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274057#274057">Arnauld</a></td></tr>
+<tr d-ix="0"><td>176</td><td>JavaScript ES6</td><td>240710T124848Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274057#274057">Arnauld</a></td></tr>
+<tr d-ix="1"><td>183</td><td>Python 3.8 prerelease</td><td>240710T191252Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274062#274062">squarero</a></td></tr>
+<tr d-ix="2"><td>150</td><td>Ruby</td><td>240710T194631Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274063#274063">Level Ri</a></td></tr>
 <tr d-ix="3"><td>079</td><td>K ngn/k</td><td>240710T125605Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274058#274058">ovs</a></td></tr>
 <tr d-ix="4"><td>318</td><td>Regenerate</td><td>240711T000011Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274068#274068">DLosc</a></td></tr>
 <tr d-ix="5"><td>572</td><td>sed 4.2.2</td><td>240710T061928Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274053#274053">guest430</a></td></tr>
 <tr d-ix="6"><td>041</td><td>Charcoal</td><td>240710T073253Z</td><td><a href="https://codegolf.stackexchange.com/questions/274051/a-ring-of-cubes/274054#274054">Neil</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 314 </s> <s> 259 </s> <s> 239 </s> <s> 233 </s> <s> 229 </s> <s> 197 </s> <s> 189 </s> 183 bytes</h1>
-<p><em>-55 bytes by encoding the character positions as a list.</em><br />
-<em>-20 bytes by <s>cheating</s> returning a 2D list, thanks to noodle person.</em><br />
-<em>-6 bytes by using unprintables.</em><br />
-<em>-4 bytes by using</em> <code>[0]*n</code> <em>instead of</em> <code>range(n)</code><em>.</em><br />
-<em>-40 bytes by Jonathan Allan.</em><br />
-<em>-6 bytes by xnor.</em></p>
-
-<p>No, I don't know how it works either.</p>
-<pre class="lang-python prettyprint-override"><code>def f(n):
- x=2*n;l=[7*x*[s]for s in' '*5*x];y=N=0
- for v in b'cV6#0P':
-  for _ in[0]*n:
-   for t in b'&#3;&#1;&#5;\12&#6;&#8;&#12;&#17;&#16;&#18;&#9;&#14;':l[y+t//5][x+t%5]='\/||'[N%4];N+=1
-   x+=v//8-8;y+=v%8-3
- return l
-</code></pre>
-<p>First example is inputted as 1.<br />
-The <code>\12</code> in the unprintable string is literal.</p>
-<p><a href="https://tio.run/##JctRS8MwFAVgRJRZRDZ/wQUpN0ud6Trrykr@QvHJlzTI1BUr9bZkcaSw/17T7TwdPs7pevvd0irrzDB87SqoGM03ATiZcMobqdbccbXXVWtgDzUhIE@503kvCxkHMPrBO3zg59vLQ/yK/nzSd68q1pxGOIk97y4vrsplcj25nU3vb@5w06g@skKkWrnIhqmWWIrjEVURPuu8iORy/LtIHoTIFlne@xZmi1UAZmf/DEEzdKYmy7AkfPppa2K/247huT9WLJn7DP8" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>166</s> 150 bytes</h1>
-
-<pre class="lang-ruby prettyprint-override"><code>-&gt;n{w=6*v=n*4
-s=(?.*w+$/)*w
-w.times{|i|j=i%4
-j&lt;1&amp;&amp;v+=[4,w*3+5,w*3+1][i/4/n%3]*(1-i/n/12*2)
-s[v-j*~w-~k=j%-3/2,l=3-k*2]='/ \  |\ /|| | |\|/'[j*5,l]}
-s}
-</code></pre>
-<p><a href="https://tio.run/##HcRLDoIwEADQfU/RhfwGyqR8XDl6kNKNiSQtSIwFGkP16mjMS95zub72nnZxnjZPR1hpgoY5Si8l@PyAGXjmy9ncb24LJlgyUcPsScbxmpNqCg913v6XWhlscIpqDakUBieUFVQZc2oVFj5efAaykaixKkaqxQCVpgR5x3noOIbAf7qAibLQFqN@M/feH8vseK@k3r8" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
-<p>Function that returns a newline separated string.</p>
-<p>Starts with a blank newline separated string, then adds one cube at a time, each cube built from 4 lines.</p>
-</div>
-<div id="pu2" class="pu"><h1>JavaScript (ES6), 176 bytes</h1>
+<div id="pu0" class="pu"><h1>JavaScript (ES6), 176 bytes</h1>
 <p>Builds the output character by character.</p>
 <pre class="lang-javascript prettyprint-override"><code>n=&gt;(y=h=n*6-2,n+=n-1,g=x=&gt;y?`| /\\
 `[X=w-x-n,s=y&gt;h/2,c=x-n&gt;4&amp;X&gt;4,~x?x--&lt;n|X&lt;0|y&gt;4&amp;y&lt;h-3&amp;c||`03123${y/h|y==4*c}210101`[y%3*4|X-y%3*s*2&amp;3]:(n+=y--%3&amp;&amp;-s|1,x=w,4)]+g(x):&quot;&quot;)(w=n*4)
@@ -105,6 +71,75 @@ s}
  ....|.|.|.|.|.|.|....\n |  2 |  2  | 0 | 4
  .....\|/.\|/.\|/.....\n |  1 |  1  | 0 | 5
 </code></pre>
+<h3>Commented</h3>
+<pre class="lang-javascript prettyprint-override"><code>n =&gt; (                    // n = input
+  y = h = n * 6 - 2,      // initialize y and h to 6n - 2
+  n += n - 1,             // turn n into the padding, initialized to 2n - 1
+  g = x =&gt;                // g = recursive function taking x
+  y ?                     // if y is not 0:
+    `| /\\\n`[            //   lookup string of possible characters
+      X = w - x - n,      //   set X = w - x - n
+      s = y &gt; h / 2,      //   set s = 1 for top half / 0 for bottom half
+      c = x - n &gt; 4 &amp;     //   set c if we're in the center of the row,
+          X &gt; 4,          //   i.e. x - n &gt; 4 and X &gt; 4
+      ~x ?                //   if x is not equal to -1:
+        x-- &lt; n | X &lt; 0 | //     append a space if we're too far to the left,
+        y &gt; 4 &amp;           //     too far to the right, or in the center of
+        y &lt; h - 3 &amp; c     //     the pattern
+        || (              //     otherwise, use a cube pattern:
+          `0312` +        //       &quot;|\ /&quot; for the middle row
+          `3${y / h |     //       either &quot;\|/ &quot; or &quot;\ / &quot; for the top row
+              y == 4 * c  //       (depending on y and c)
+          }21` +          //
+          `0101`          //       or &quot;| | &quot; for the bottom row
+        )[  y % 3 * 4 |   //     get the position of the pattern
+            X -           //     get the position of the character in the
+            y % 3 * s * 2 //     pattern
+            &amp; 3 ]         //
+      :                   //   else (end of row):
+        ( n += y-- % 3    //     add -1, 0 or 1 to the padding
+              &amp;&amp; -s | 1,  //
+          x = w,          //     reset x to w
+          4 )             //     append a line-feed
+    ] + g(x)              //   append the result of a recursive call
+  :                       // else (end of recursion):
+    &quot;&quot;                    //   stop
+)(w = n * 4)              // initial call to g with x = w = 4n
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://docs.python.org/3.8/" rel="nofollow noreferrer">Python 3.8 (pre-release)</a>, <s> 314 </s> <s> 259 </s> <s> 239 </s> <s> 233 </s> <s> 229 </s> <s> 197 </s> <s> 189 </s> 183 bytes</h1>
+<p><em>-55 bytes by encoding the character positions as a list.</em><br />
+<em>-20 bytes by <s>cheating</s> returning a 2D list, thanks to noodle person.</em><br />
+<em>-6 bytes by using unprintables.</em><br />
+<em>-4 bytes by using</em> <code>[0]*n</code> <em>instead of</em> <code>range(n)</code><em>.</em><br />
+<em>-40 bytes by Jonathan Allan.</em><br />
+<em>-6 bytes by xnor.</em></p>
+
+<p>No, I don't know how it works either.</p>
+<pre class="lang-python prettyprint-override"><code>def f(n):
+ x=2*n;l=[7*x*[s]for s in' '*5*x];y=N=0
+ for v in b'cV6#0P':
+  for _ in[0]*n:
+   for t in b'&#3;&#1;&#5;\12&#6;&#8;&#12;&#17;&#16;&#18;&#9;&#14;':l[y+t//5][x+t%5]='\/||'[N%4];N+=1
+   x+=v//8-8;y+=v%8-3
+ return l
+</code></pre>
+<p>First example is inputted as 1.<br />
+The <code>\12</code> in the unprintable string is literal.</p>
+<p><a href="https://tio.run/##JctRS8MwFAVgRJRZRDZ/wQUpN0ud6Trrykr@QvHJlzTI1BUr9bZkcaSw/17T7TwdPs7pevvd0irrzDB87SqoGM03ATiZcMobqdbccbXXVWtgDzUhIE@503kvCxkHMPrBO3zg59vLQ/yK/nzSd68q1pxGOIk97y4vrsplcj25nU3vb@5w06g@skKkWrnIhqmWWIrjEVURPuu8iORy/LtIHoTIFlne@xZmi1UAZmf/DEEzdKYmy7AkfPppa2K/247huT9WLJn7DP8" rel="nofollow noreferrer" title="Python 3.8 (pre-release) – Try It Online">Try it online!</a></p>
+</div>
+<div id="pu2" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>166</s> 150 bytes</h1>
+
+<pre class="lang-ruby prettyprint-override"><code>-&gt;n{w=6*v=n*4
+s=(?.*w+$/)*w
+w.times{|i|j=i%4
+j&lt;1&amp;&amp;v+=[4,w*3+5,w*3+1][i/4/n%3]*(1-i/n/12*2)
+s[v-j*~w-~k=j%-3/2,l=3-k*2]='/ \  |\ /|| | |\|/'[j*5,l]}
+s}
+</code></pre>
+<p><a href="https://tio.run/##HcRLDoIwEADQfU/RhfwGyqR8XDl6kNKNiSQtSIwFGkP16mjMS95zub72nnZxnjZPR1hpgoY5Si8l@PyAGXjmy9ncb24LJlgyUcPsScbxmpNqCg913v6XWhlscIpqDakUBieUFVQZc2oVFj5efAaykaixKkaqxQCVpgR5x3noOIbAf7qAibLQFqN@M/feH8vseK@k3r8" rel="nofollow noreferrer" title="Ruby – Try It Online">Try it online!</a></p>
+<p>Function that returns a newline separated string.</p>
+<p>Starts with a blank newline separated string, then adds one cube at a time, each cube built from 4 lines.</p>
 </div>
 <div id="pu3" class="pu"><h1><a href="https://codeberg.org/ngn/k" rel="nofollow noreferrer">K (ngn/k)</a>, 79 bytes</h1>
 <pre><code>{`0:&quot;\\/|&quot;(3|=8*x).[;;&amp;;+5 4#4\3947690525]/(x+x+!'4 5)+\+-4+9\,/1_'x#'&quot;,EA$&quot;}
