--- a/q/274087.html
+++ b/q/274087.html
@@ -26,15 +26,24 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>060</td><td>Logo</td><td>240712T152602Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274132#274132">Neil</a></td></tr>
-<tr d-ix="1"><td>142</td><td>Ruby</td><td>240711T210954Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274100#274100">Level Ri</a></td></tr>
-<tr d-ix="2"><td>036</td><td>MATL</td><td>240712T143914Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274130#274130">Luis Men</a></td></tr>
-<tr d-ix="3"><td>056</td><td>APLDyalog Unicode</td><td>240712T053759Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274116#274116">akamayu</a></td></tr>
-<tr d-ix="4"><td>119</td><td>R</td><td>240712T092046Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274124#274124">Dominic </a></td></tr>
+<tr d-ix="0"><td>098</td><td>R</td><td>240712T092046Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274124#274124">Dominic </a></td></tr>
+<tr d-ix="1"><td>060</td><td>Logo</td><td>240712T152602Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274132#274132">Neil</a></td></tr>
+<tr d-ix="2"><td>142</td><td>Ruby</td><td>240711T210954Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274100#274100">Level Ri</a></td></tr>
+<tr d-ix="3"><td>036</td><td>MATL</td><td>240712T143914Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274130#274130">Luis Men</a></td></tr>
+<tr d-ix="4"><td>056</td><td>APLDyalog Unicode</td><td>240712T053759Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274116#274116">akamayu</a></td></tr>
 <tr d-ix="5"><td>064</td><td>Python</td><td>240711T190654Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274093#274093">Albert.L</a></td></tr>
 <tr d-ix="6"><td>062</td><td>Wolfram Language Mathematica</td><td>240711T192306Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274094#274094">Sanguine</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h2>Logo, <s>61</s> 60 bytes</h2>
+<div id="pu0" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a>, <s>116</s> <s>111</s> 98 bytes</h1>
+<p><em>Edit: no longer requiring <code>r</code>adius to be given as an input saves 13 bytes.</em></p>
+
+<pre class="lang-r prettyprint-override"><code>\(n,i=1:396/99-2,v=1i^(1:n*4/n),R=abs(1-v[n/2]),`~`=sapply)image(i~\(x)i~\(y)all(abs(x+y*1i-v)&lt;R))
+</code></pre>
+<p><a href="https://rdrr.io/snippets/embed/?code=reuleaux%3D%0Afunction(n%2Ci%3D1%3A396%2F99-2%2Cv%3D1i%5E(1%3An*4%2Fn)%2CR%3Dabs(1-v%5Bn%2F2%5D)%2C%60%7E%60%3Dsapply)image(i%7Efunction(x)i%7Efunction(y)all(abs(x%2By*1i-v)%3CR))%0A%0Areuleaux(3)%0Areuleaux(5)%0A" rel="nofollow noreferrer">Try it at rdrr.io</a>.
+(note that rdrr.io runs on an earlier version of <a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a> that does not use the <code>\</code> syntax for a function definition, so the code in the link is 21 bytes longer)</p>
+<p><a href="https://i.sstatic.net/2w4U96M6.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/2w4U96M6.png" alt="enter image description here" /></a></p>
+</div>
+<div id="pu1" class="pu"><h2>Logo, <s>61</s> 60 bytes</h2>
 <pre><code>to r:n
 repeat:n[pd arc 90 180/:n pu fd 90 rt 180-180/:n]
 end
@@ -45,7 +54,7 @@ r 5
 </code></pre>
 <p>(Substitute your desired value for <code>5</code>.)</p>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>152</s> 142 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>152</s> 142 bytes</h1>
 
 <pre class="lang-ruby prettyprint-override"><code>-&gt;n{s='&lt;svg viewBox=&quot;-50-50 99 99&quot;&gt;&lt;path d=&quot;M40 0'
 n.times{|j|s&lt;&lt;&quot;A#{r=40/(k=1i**(1.0/n)).imag} #{r} 0 0,0 %f %f&quot;%(40*k**(4*~j)).rect}
@@ -60,7 +69,7 @@ s+'&quot;&gt;'}
 </div>
 </p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, 36 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, 36 bytes</h1>
 <pre><code>t:!=ZFt9W:8W/qt!J*+le-|wq|X&gt;&gt;a[]e0YG
 </code></pre>
 <p>Try at <a href="https://matl.io/?code=t%3A%21%3DZFt9W%3A8W%2Fqt%21J%2a%2Ble-%7Cwq%7CX%3E%3Ea%5B%5De0YG&amp;inputs=5&amp;version=22.8.0" rel="nofollow noreferrer"><strong>MATL Online</strong></a>!</p>
@@ -90,7 +99,7 @@ a      % Any. Gives a row vector of length 512^2, containing 1 if the pixel
 0YG    % Write as image file. Implicitly display
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup> <strike>58</strike> 56 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
+<div id="pu4" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup> <strike>58</strike> 56 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
 <p>-2 bytes due to unused variable assignment <code>B←</code>.</p>
 <p>A dfn that takes the number of edges and outputs a bitmap of the shape.</p>
 <pre><code>{(C-C⊖⍨⌈⍵÷2)∧.&gt;⍥|C∘.-I∘.+0J1×I←40÷⍨¯41+⍳81⊣C←¯1*⍵÷⍨+⍨⍳⍵}
@@ -104,15 +113,6 @@ a      % Any. Gives a row vector of length 512^2, containing 1 if the pixel
             ∧.&gt;⍥|                                        ⍝ are the points within the reuleaux polygon
 </code></pre>
 <p><a href="https://razetime.github.io/APLgolf/?h=AwA&amp;c=q9Zw1nV@1DXtUe@KRz0dj3q3Ht5upPmoY7me3aPepTXOjzpm6Ol6gkhtAy/Dw9M9H7VNMDE4vB2o/NB6E0PtR72bLQwfdS12BoofWm@oBTYAKKkNMq93M5BbCwA&amp;f=S3/UNqHaSF9dT1k92lD7Ue/W2FqFR71zFUryFdLyi3ITSxRKMlIVkjJLchMLuNIV0hSMwaQpmDQHk5ZcAA&amp;i=AwA&amp;r=tryapl&amp;l=apl-dyalog&amp;m=dfn&amp;n=f" rel="nofollow noreferrer">Try it on APLgolf!</a></p>
-</div>
-<div id="pu4" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a>, <s>139</s> <s>132</s> 119 bytes</h1>
-<p>(or 98 bytes in <strong>R</strong> ≥ 4.1 by replacing 3x <code>function</code> keywords for <code>\</code>).</p>
-<p><em>Edit: no longer requiring <code>r</code>adius to be given as an input saves 13 bytes.</em></p>
-
-<pre class="lang-r prettyprint-override"><code>function(n,i=1:396/99-2,v=1i^(1:n*4/n),R=abs(1-v[n/2]),`~`=sapply)image(i~function(x)i~function(y)all(abs(x+y*1i-v)&lt;R))
-</code></pre>
-<p><a href="https://rdrr.io/snippets/embed/?code=reuleaux%3D%0Afunction(n%2Ci%3D1%3A396%2F99-2%2Cv%3D1i%5E(1%3An*4%2Fn)%2CR%3Dabs(1-v%5Bn%2F2%5D)%2C%60%7E%60%3Dsapply)image(i%7Efunction(x)i%7Efunction(y)all(abs(x%2By*1i-v)%3CR))%0A%0Areuleaux(3)%0Areuleaux(5)%0A" rel="nofollow noreferrer">Try it at rdrr.io</a></p>
-<p><a href="https://i.sstatic.net/2w4U96M6.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/2w4U96M6.png" alt="enter image description here" /></a></p>
 </div>
 <div id="pu5" class="pu"><h1><a href="https://www.python.org" rel="nofollow noreferrer">Python</a>, 64 bytes</h1>
 <pre class="lang-python prettyprint-override"><code>from turtle import*
