--- a/q/274087.html
+++ b/q/274087.html
@@ -48,6 +48,10 @@ s+'&quot;&gt;'}
 </div>
 </div>
 </p>
+<p><strong>Viewing notes</strong></p>
+<p>The SVG has been tested in Chrome and Edge. A concern has been raised about the lack of space between the two <code>-50</code>s defining coordinates of the corner of the viewbox, but that makes no difference to the output in either of these browsers.</p>
+<p>There is an issue with the browsers sizing the viewbox based on the width only and ignoring the height, requiring the user to scroll vertically. It is recommended to hit <code>Run code snippet</code> before expanding, to avoid getting a horizontally wide but vertically very short window requiring  excessive scrolling. Narrowing the browser window helps with this.</p>
+<p>I have reduced the radius of the output from 40 units to 9 units to make it easier to get the whole Reuleaux polygon into view (this also saves 3 bytes.) A possible further enhancement could be to reduce the height of the viewbox to help eliminate vertical scrolling (this could potentially save another 2 bytes.)</p>
 </div>
 <div id="pu1" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, 36 bytes</h1>
 <pre><code>t:!=ZFt9W:8W/qt!J*+le-|wq|X&gt;&gt;a[]e0YG
