--- a/q/224125.html
+++ b/q/224125.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>019</td><td>Julia 1.0</td><td>230914T173439Z</td><td><a href="https://codegolf.stackexchange.com/questions/224125/replace-all-items-with-their-counts/265225#265225">Ashlin H</a></td></tr>
-<tr d-ix="1"><td>005</td><td>Uiua</td><td>231014T023404Z</td><td><a href="https://codegolf.stackexchange.com/questions/224125/replace-all-items-with-their-counts/265990#265990">chunes</a></td></tr>
+<tr d-ix="0"><td>004</td><td>Uiua SBCS</td><td>231014T023404Z</td><td><a href="https://codegolf.stackexchange.com/questions/224125/replace-all-items-with-their-counts/265990#265990">chunes</a></td></tr>
+<tr d-ix="1"><td>019</td><td>Julia 1.0</td><td>230914T173439Z</td><td><a href="https://codegolf.stackexchange.com/questions/224125/replace-all-items-with-their-counts/265225#265225">Ashlin H</a></td></tr>
 <tr d-ix="2"><td>005</td><td>Pip p</td><td>230914T183802Z</td><td><a href="https://codegolf.stackexchange.com/questions/224125/replace-all-items-with-their-counts/265227#265227">DLosc</a></td></tr>
 <tr d-ix="3"><td>002</td><td>Nekomata</td><td>230912T081255Z</td><td><a href="https://codegolf.stackexchange.com/questions/224125/replace-all-items-with-their-counts/265152#265152">alephalp</a></td></tr>
 <tr d-ix="4"><td>042</td><td>Common Lisp</td><td>230727T121209Z</td><td><a href="https://codegolf.stackexchange.com/questions/224125/replace-all-items-with-their-counts/263420#263420">coredump</a></td></tr>
@@ -79,25 +79,22 @@
 <tr d-ix="50"><td>027</td><td>Haskell</td><td>210421T234403Z</td><td><a href="https://codegolf.stackexchange.com/questions/224125/replace-all-items-with-their-counts/224129#224129">Delfad0r</a></td></tr>
 <tr d-ix="51"><td>002</td><td>Jelly</td><td>210421T233929Z</td><td><a href="https://codegolf.stackexchange.com/questions/224125/replace-all-items-with-their-counts/224126#224126">caird co</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="http://julialang.org/" rel="nofollow noreferrer">Julia 1.0</a>, 19 bytes</h1>
+<div id="pu0" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a> <sup><a href="https://tinyurl.com/Uiua-SBCS-Apr-12" rel="nofollow noreferrer">SBCS</a></sup>, <s>5</s> 4 bytes</h1>
+<pre><code>⊏⟜°⊚
+</code></pre>
+<p><a href="https://uiua.org/pad?src=0_12_0-dev_1__ZiDihpAg4oqP4p-cwrDiipoKCmYgWzFdCmYgWzEgMl0KZiBbMSA0IDRdCmYgWzQgNCAyXQpmIFs0IDQgNCA0XQpmIFsxMCAyMCAxMCAyMF0KZiBbMSAyIDIgNCA0IDQgNF0KZiBbMSAyIDIgMSA0IDggMV0K" rel="nofollow noreferrer">Try it!</a></p>
+<p>Works with natural numbers.</p>
+<pre><code>   °⊚   # inverse where (occurrences)
+⊏⟜      # select from occurrences using input as indices
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="http://julialang.org/" rel="nofollow noreferrer">Julia 1.0</a>, 19 bytes</h1>
 
 <pre class="lang-julia prettyprint-override"><code>~a=@.sum(==(a),[a])
 </code></pre>
 <p><a href="https://tio.run/##bZGxCsMgEIZ3n@IgSwKh1MShi5Clb9At3OAQaEtCS01Ipry6vSgFtScnHv7f/f7gcxkfRm7O7UZ3J7tMpdalqereYOUKuG5meo@D6Oz9tcLeyxoaX9SoGi7UoBAF3AY7W9EZa4fPfHAIzNIaSIkx8kIe884JKXnyyJORlEwh65nDysMN8rZZhgDn5gccKXGSM3nQDif@mTPJw23yUJQ8UbjB6FfCYPtTWi9StSjcFw" rel="nofollow noreferrer" title="Julia 1.0 – Try It Online">Try it online!</a></p>
 <p>Saved 2 bytes by substituting <code>sum</code> for <code>count</code>.</p>
 <p>-3 bytes thanks to MarcMush: replace <code>Ref(a)</code> with <code>[a]</code></p>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://uiua.org" rel="nofollow noreferrer">Uiua</a>, 5 <a href="https://www.uiua.org/pad?src=U0JDUyDihpAgK0BcMOKKlwpEZWNvZGUg4oaQIOKHjOKKjy0x4pa9wrEu4o2Y4ouv4oav4oqCwq8x4qe74ouv4qe7LOKHjOKItSjihpjCrzHii68rMjU2KSAtQFwwKzEKJnAg4oqCIjggYml0IGVuY29kaW5nOlx0IiBTQkNTICLih4ziio8tMeKWvcKxLuKNmOKLr-KGr-KKgsKvMeKnu-KLr-Knuyzih4ziiLUo4oaYwq8x4ouvKzI1NikiIOKKgitAXDDih6ExMjkiLiziiLY74oiYwqzCscKv4oy14oia4peL4oyK4oyI4oGFPeKJoDziiaQ-4omlKy3Dl8O34pe_4oG_4oKZ4oan4oal4oig4qe74paz4oeh4oqi4oeM4pmt4ouv4o2J4o2P4o2W4oqa4oqb4oqd4pah4oqU4omF4oqf4oqC4oqP4oqh4oav4oaZ4oaY4oa74per4pa94oyV4oiK4oqXL-KIp1xc4oi14omh4oi64oqe4oqg4o2l4oqV4oqc4oip4oqT4oqD4oqZ4ouF4o2Y4o2c4o2a4qyaJz_ijaPijaQh4o6L4oas4pqCzrfPgM-E4oiefl9bXXt9KCnCr0AkXCLihpB8IyIKJnAg4oqCImRlY29kZWQ6XHQiIERlY29kZSAiwqPCsS0xwrjChy7DjMKlwrPCsMKIMcKfwqXCnyzCo8K_KMK1wogxwqUrMjU2KSIg4oqCK0BcMOKHoTEyOSIuLOKItjviiJjCrMKxwq_ijLXiiJril4vijIrijIjigYU94omgPOKJpD7iiaUrLcOXw7fil7_igb_igpnihqfihqXiiKDip7vilrPih6HiiqLih4zima3ii6_ijYnijY_ijZbiipriipviip3ilqHiipTiiYXiip_iioLiio_iiqHihq_ihpnihpjihrvil6vilr3ijJXiiIriipcv4oinXFziiLXiiaHiiLriip7iiqDijaXiipXiipziiKniipPiioPiipnii4XijZjijZzijZrirJonP-KNo-KNpCHijovihqzimoLOt8-Az4TiiJ5-X1tde30oKcKvQCRcIuKGkHwjIg==" rel="nofollow noreferrer">bytes</a></h1>
-<pre><code>⊏∶⍘⊚.
-</code></pre>
-<p><a href="https://uiua.org/pad?src=ZiDihpAg4oqP4oi24o2Y4oqaLgoKZiBbMV0KZiBbMSAyXQpmIFsxIDQgNF0KZiBbNCA0IDJdCmYgWzQgNCA0IDRdCmYgWzEwIDIwIDEwIDIwXQpmIFsxIDIgMiA0IDQgNCA0XQpmIFsxIDIgMiAxIDQgOCAxXQ==" rel="nofollow noreferrer">Try it!</a></p>
-<p>Works with natural numbers.</p>
-<pre><code>⊏∶⍘⊚.
-    .  # duplicate
-  ⍘⊚   # inverse where (occurrences)
- :     # flip
-⊏      # select
-</code></pre>
 </div>
 <div id="pu2" class="pu"><h1><a href="https://github.com/dloscutoff/pip" rel="nofollow noreferrer">Pip</a> <code>-p</code>, 5 bytes</h1>
 <pre><code>_NgMg
