--- a/q/274087.html
+++ b/q/274087.html
@@ -26,7 +26,7 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>154</td><td>Javascript</td><td>240713T005151Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274138#274138">ccprog</a></td></tr>
+<tr d-ix="0"><td>153</td><td>Javascript</td><td>240713T005151Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274138#274138">ccprog</a></td></tr>
 <tr d-ix="1"><td>138</td><td>Ruby</td><td>240711T210954Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274100#274100">Level Ri</a></td></tr>
 <tr d-ix="2"><td>036</td><td>MATL</td><td>240712T143914Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274130#274130">Luis Men</a></td></tr>
 <tr d-ix="3"><td>098</td><td>R</td><td>240712T092046Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274124#274124">Dominic </a></td></tr>
@@ -35,11 +35,12 @@
 <tr d-ix="6"><td>064</td><td>Python</td><td>240711T190654Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274093#274093">Albert.L</a></td></tr>
 <tr d-ix="7"><td>062</td><td>Wolfram Language Mathematica</td><td>240711T192306Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274094#274094">Sanguine</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h2>Javascript, 154 bytes</h2>
+<div id="pu0" class="pu"><h2>Javascript, <s>154</s> 153 bytes</h2>
 <p>A function returning a string containing an SVG for inline insertion into a HTML page.</p>
+<p>1 byte saved thx to @noodle person.</p>
 <p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
 <div class="snippet-code">
-<pre class="snippet-code-js lang-js prettyprint-override"><code>f=n=&gt;(b=(M=Math).PI/n,`&lt;svg viewBox=-4,-1,9,2&gt;&lt;path d=M${Array.from(Array(n),(_,i)=&gt;[M.sin(a=2*i*b),M.cos(a)]+'A'+[r=(2+2*M.cos(b))**.5,r]+',0,00')}0,1&gt;`)</code></pre>
+<pre class="snippet-code-js lang-js prettyprint-override"><code>f=n=&gt;`&lt;svg viewBox=-4,-1,9,2&gt;&lt;path d=M${Array.from(Array(n),(_,i)=&gt;[(M=Math).sin(a=2*i*M.PI/n),M.cos(a)]+'A'+[r=(2+2*M.cos(M.PI/n))**.5,r]+',0,00')}0,1&gt;`</code></pre>
 <pre class="snippet-code-html lang-html prettyprint-override"><code>&lt;input type=number size=2 min=3 step=2 oninput=w.setHTMLUnsafe(f(value|0))&gt;&lt;div id=w&gt;</code></pre>
 </div>
 </div>
