--- a/q/274087.html
+++ b/q/274087.html
@@ -26,16 +26,35 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>153</td><td>Javascript</td><td>240713T005151Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274138#274138">ccprog</a></td></tr>
-<tr d-ix="1"><td>138</td><td>Ruby</td><td>240711T210954Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274100#274100">Level Ri</a></td></tr>
-<tr d-ix="2"><td>036</td><td>MATL</td><td>240712T143914Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274130#274130">Luis Men</a></td></tr>
-<tr d-ix="3"><td>098</td><td>R</td><td>240712T092046Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274124#274124">Dominic </a></td></tr>
-<tr d-ix="4"><td>060</td><td>Logo</td><td>240712T152602Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274132#274132">Neil</a></td></tr>
+<tr d-ix="0"><td>060</td><td>Logo</td><td>240712T152602Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274132#274132">Neil</a></td></tr>
+<tr d-ix="1"><td>153</td><td>Javascript</td><td>240713T005151Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274138#274138">ccprog</a></td></tr>
+<tr d-ix="2"><td>138</td><td>Ruby</td><td>240711T210954Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274100#274100">Level Ri</a></td></tr>
+<tr d-ix="3"><td>036</td><td>MATL</td><td>240712T143914Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274130#274130">Luis Men</a></td></tr>
+<tr d-ix="4"><td>098</td><td>R</td><td>240712T092046Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274124#274124">Dominic </a></td></tr>
 <tr d-ix="5"><td>056</td><td>APLDyalog Unicode</td><td>240712T053759Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274116#274116">akamayu</a></td></tr>
 <tr d-ix="6"><td>064</td><td>Python</td><td>240711T190654Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274093#274093">Albert.L</a></td></tr>
 <tr d-ix="7"><td>062</td><td>Wolfram Language Mathematica</td><td>240711T192306Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274094#274094">Sanguine</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h2>Javascript, <s>154</s> 153 bytes</h2>
+<div id="pu0" class="pu"><h2>Logo, <s>61</s> 60 bytes</h2>
+<pre><code>to r:n
+repeat:n[pd arc 90 180/:n pu fd 90 rt 180-180/:n]
+end
+</code></pre>
+<p>Unfortunately the online logo resource I used to use is no longer available, but you can paste the code into the textbox on <a href="https://rmmh.github.io/papert/static/" rel="nofollow noreferrer">https://rmmh.github.io/papert/static/</a> and run it. (Also paste the following code to actually get anything to run.)</p>
+<pre><code>clear
+r 5
+</code></pre>
+<p>(Substitute your desired value for <code>5</code>.)</p>
+<p>It's also possible to draw a padded polygon; this is still a curve of constant width but that with <code>w</code> is now <code>d+2p</code> where <code>p</code> is the extra padding:</p>
+<pre><code>to r:n:d:p
+repeat:n[pd arc:p 180/:n lt 180 arc:d+:p 180/:n pu fd:d lt 180/:n]
+end
+
+clear
+r 5 100 25
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h2>Javascript, <s>154</s> 153 bytes</h2>
 <p>A function returning a string containing an SVG for inline insertion into a HTML page.</p>
 <p>1 byte saved thx to @noodle person.</p>
 <p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
@@ -59,7 +78,7 @@
 }
 </code></pre>
 </div>
-<div id="pu1" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>152 142</s> 138 bytes</h1>
+<div id="pu2" class="pu"><h1><a href="https://www.ruby-lang.org/" rel="nofollow noreferrer">Ruby</a>, <s>152 142</s> 138 bytes</h1>
 
 <pre class="lang-ruby prettyprint-override"><code>-&gt;n{s='&lt;svg viewBox=&quot;-50-9 99 18&quot;&gt;&lt;path d=&quot;M9 0'
 n.times{|j|s&lt;&lt;&quot;A#{r=9/(k=1i**(1.0/n)).imag} #{r} 0 0,0 %f %f&quot;%(9*k**(4*~j)).rect}
@@ -78,7 +97,7 @@ s+'&quot;&gt;'}
 <p>There is an issue with the browsers sizing the viewbox based on the width only and ignoring the height, requiring the user to scroll vertically. It is recommended to hit <code>Run code snippet</code> before expanding, to avoid getting a horizontally wide but vertically very short window requiring  excessive scrolling. Narrowing the browser window helps with this.</p>
 <p>I have reduced the radius of the output from 40 units to 9 units to make it easier to get the whole Reuleaux polygon into view (this also saves 3 bytes.) I have also reduced the height of the viewbox to help eliminate vertical scrolling (this saves another byte.)</p>
 </div>
-<div id="pu2" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, 36 bytes</h1>
+<div id="pu3" class="pu"><h1><a href="https://github.com/lmendo/MATL" rel="nofollow noreferrer">MATL</a>, 36 bytes</h1>
 <pre><code>t:!=ZFt9W:8W/qt!J*+le-|wq|X&gt;&gt;a[]e0YG
 </code></pre>
 <p>Try at <a href="https://matl.io/?code=t%3A%21%3DZFt9W%3A8W%2Fqt%21J%2a%2Ble-%7Cwq%7CX%3E%3Ea%5B%5De0YG&amp;inputs=5&amp;version=22.8.0" rel="nofollow noreferrer"><strong>MATL Online</strong></a>!</p>
@@ -108,7 +127,7 @@ a      % Any. Gives a row vector of length 512^2, containing 1 if the pixel
 0YG    % Write as image file. Implicitly display
 </code></pre>
 </div>
-<div id="pu3" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a>, <s>116</s> <s>111</s> 98 bytes</h1>
+<div id="pu4" class="pu"><h1><a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a>, <s>116</s> <s>111</s> 98 bytes</h1>
 <p><em>Edit: no longer requiring <code>r</code>adius to be given as an input saves 13 bytes.</em></p>
 
 <pre class="lang-r prettyprint-override"><code>\(n,i=1:396/99-2,v=1i^(1:n*4/n),R=abs(1-v[n/2]),`~`=sapply)image(i~\(x)i~\(y)all(abs(x+y*1i-v)&lt;R))
@@ -116,17 +135,6 @@ a      % Any. Gives a row vector of length 512^2, containing 1 if the pixel
 <p><a href="https://rdrr.io/snippets/embed/?code=reuleaux%3D%0Afunction(n%2Ci%3D1%3A396%2F99-2%2Cv%3D1i%5E(1%3An*4%2Fn)%2CR%3Dabs(1-v%5Bn%2F2%5D)%2C%60%7E%60%3Dsapply)image(i%7Efunction(x)i%7Efunction(y)all(abs(x%2By*1i-v)%3CR))%0A%0Areuleaux(3)%0Areuleaux(5)%0A" rel="nofollow noreferrer">Try it at rdrr.io</a>.
 (note that rdrr.io runs on an earlier version of <a href="https://www.r-project.org/" rel="nofollow noreferrer">R</a> that does not use the <code>\</code> syntax for a function definition, so the code in the link is 21 bytes longer)</p>
 <p><a href="https://i.sstatic.net/2w4U96M6.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/2w4U96M6.png" alt="enter image description here" /></a></p>
-</div>
-<div id="pu4" class="pu"><h2>Logo, <s>61</s> 60 bytes</h2>
-<pre><code>to r:n
-repeat:n[pd arc 90 180/:n pu fd 90 rt 180-180/:n]
-end
-</code></pre>
-<p>Unfortunately the online logo resource I used to use is no longer available, but you can paste the code into the textbox on <a href="https://rmmh.github.io/papert/static/" rel="nofollow noreferrer">https://rmmh.github.io/papert/static/</a> and run it. (Also paste the following code to actually get anything to run.)</p>
-<pre><code>clear
-r 5
-</code></pre>
-<p>(Substitute your desired value for <code>5</code>.)</p>
 </div>
 <div id="pu5" class="pu"><h1><a href="https://dyalog.com" rel="nofollow noreferrer">APL(Dyalog Unicode)</a>, <sup><s></s></sup> <strike>58</strike> 56 bytes <sup><a href="https://github.com/abrudz/SBCS" rel="nofollow noreferrer">SBCS</a></sup></h1>
 <p>-2 bytes due to unused variable assignment <code>B←</code>.</p>
