--- a/q/274087.html
+++ b/q/274087.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>147</td><td>Javascript</td><td>240713T005151Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274138#274138">ccprog</a></td></tr>
-<tr d-ix="1"><td>160</td><td>Scratch 3.23.1</td><td>240713T115641Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274141#274141">int 21h </a></td></tr>
+<tr d-ix="0"><td>145</td><td>Scratch 3.23.1</td><td>240713T115641Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274141#274141">int 21h </a></td></tr>
+<tr d-ix="1"><td>147</td><td>Javascript</td><td>240713T005151Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274138#274138">ccprog</a></td></tr>
 <tr d-ix="2"><td>060</td><td>Logo</td><td>240712T152602Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274132#274132">Neil</a></td></tr>
 <tr d-ix="3"><td>138</td><td>Ruby</td><td>240711T210954Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274100#274100">Level Ri</a></td></tr>
 <tr d-ix="4"><td>036</td><td>MATL</td><td>240712T143914Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274130#274130">Luis Men</a></td></tr>
@@ -36,7 +36,24 @@
 <tr d-ix="7"><td>064</td><td>Python</td><td>240711T190654Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274093#274093">Albert.L</a></td></tr>
 <tr d-ix="8"><td>062</td><td>Wolfram Language Mathematica</td><td>240711T192306Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274094#274094">Sanguine</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h2>Javascript, <s>154</s> 147 bytes</h2>
+<div id="pu0" class="pu"><h1><a href="https://scratch.mit.edu/" rel="nofollow noreferrer">Scratch 3.23.1</a>, <s>160</s> 145 bytes</h1>
+<ul>
+<li>thanks to noodle person for syntax correction &amp; golfing</li>
+</ul>
+<pre><code>when gf clicked
+erase all
+pen down
+ask()and wait
+repeat(answer
+turn cw((180)/(answer))degrees
+repeat((180)/(answer
+move(3)steps
+turn cw(1)degrees
+</code></pre>
+<p>A program that inputs <span class="math-container">\$n\$</span> - a number of sides and plots a Reuleux polygon of <span class="math-container">\$n\$</span> sides. Radius length is fixed.</p>
+<p><a href="https://i.sstatic.net/Lmswtgdr.gif" rel="nofollow noreferrer"><img src="https://i.sstatic.net/Lmswtgdr.gif" alt="enter image description here" /></a></p>
+</div>
+<div id="pu1" class="pu"><h2>Javascript, <s>154</s> 147 bytes</h2>
 <p>A function returning a string containing an SVG for inline insertion into a HTML page.</p>
 <p>2 bytes less due to changed count.<br />
 5 byte saved thx to hints by @noodle person and @Neil.</p>
@@ -61,22 +78,6 @@ n=&gt;`&lt;svg viewBox=-4,-1,9,2&gt;&lt;path d=M${[...Array(n)].map((_,i)=&gt;[(
   return s += '0,1&gt;'
 }
 </code></pre>
-</div>
-<div id="pu1" class="pu"><h1><a href="https://scratch.mit.edu/" rel="nofollow noreferrer">Scratch 3.23.1</a>, 160 bytes</h1>
-<pre><code>goto x:-50,y:50
-point in direction:90
-erase all
-pen down
-ask and wait
-set n to answer
-repeat n
- repeat 180/n
-  move 3 steps
-  turn 1 degrees
- turn 180/n degrees
-</code></pre>
-<p>A program that inputs <span class="math-container">\$n\$</span> - a number of sides and plots a Reuleux polygon of <span class="math-container">\$n\$</span> sides. Radius length is fixed.</p>
-<p><a href="https://i.sstatic.net/Lmswtgdr.gif" rel="nofollow noreferrer"><img src="https://i.sstatic.net/Lmswtgdr.gif" alt="enter image description here" /></a></p>
 </div>
 <div id="pu2" class="pu"><h2>Logo, <s>61</s> 60 bytes</h2>
 <pre><code>to r:n
