--- a/q/274087.html
+++ b/q/274087.html
@@ -26,8 +26,8 @@
     <th class="ttime">Time</th>
     <th class="tlink">Link</th>
   </tr>
-<tr d-ix="0"><td>145</td><td>Scratch 3.23.1</td><td>240713T115641Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274141#274141">int 21h </a></td></tr>
-<tr d-ix="1"><td>147</td><td>Javascript</td><td>240713T005151Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274138#274138">ccprog</a></td></tr>
+<tr d-ix="0"><td>143</td><td>Javascript</td><td>240713T005151Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274138#274138">ccprog</a></td></tr>
+<tr d-ix="1"><td>145</td><td>Scratch 3.23.1</td><td>240713T115641Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274141#274141">int 21h </a></td></tr>
 <tr d-ix="2"><td>060</td><td>Logo</td><td>240712T152602Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274132#274132">Neil</a></td></tr>
 <tr d-ix="3"><td>138</td><td>Ruby</td><td>240711T210954Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274100#274100">Level Ri</a></td></tr>
 <tr d-ix="4"><td>036</td><td>MATL</td><td>240712T143914Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274130#274130">Luis Men</a></td></tr>
@@ -36,7 +36,33 @@
 <tr d-ix="7"><td>064</td><td>Python</td><td>240711T190654Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274093#274093">Albert.L</a></td></tr>
 <tr d-ix="8"><td>062</td><td>Wolfram Language Mathematica</td><td>240711T192306Z</td><td><a href="https://codegolf.stackexchange.com/questions/274087/draw-a-regular-reuleaux-polygon/274094#274094">Sanguine</a></td></tr>
 </table>
-<div id="pu0" class="pu"><h1><a href="https://scratch.mit.edu/" rel="nofollow noreferrer">Scratch 3.23.1</a>, <s>160</s> 145 bytes</h1>
+<div id="pu0" class="pu"><h2>Javascript, <s>154</s> <s>147</s> 143 bytes</h2>
+<p>A function returning a string containing an SVG for inline insertion into a HTML page.</p>
+<p>2 bytes less due to changed count.<br />
+5 byte saved thx to hints by @noodle person and @Neil.<br />
+4 bytes saved by using <code>eval(&quot;with(Math)for...</code>, thx to @noodle person.</p>
+<p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
+<div class="snippet-code">
+<pre class="snippet-code-js lang-js prettyprint-override"><code>f=
+n=&gt;`&lt;svg viewBox=-4,-1,9,2&gt;&lt;path d=M${eval("with(Math)for(i=s=0;i&lt;n;i++)s+=[sin(a=2*i*PI/n),cos(a)]+'A'+[r=(2+2*cos(PI/n))**.5,r,0,0,0]")}0,1&gt;`</code></pre>
+<pre class="snippet-code-html lang-html prettyprint-override"><code>&lt;input type=number size=2 min=3 step=2 oninput=w.setHTMLUnsafe(f(value|0))&gt;&lt;div id=w&gt;</code></pre>
+</div>
+</div>
+</p>
+<h3>Ungolfed</h3>
+<pre><code>f = n =&gt; {
+  s = '&lt;svg viewBox=-4,-1,9,2&gt;&lt;path d=M'
+  for(i=s=0;i&lt;n;i++) {
+    a = 2 * i * Math.PI / n
+    p = [Math.sin(a), Math.cos(a)]
+    r = (2 + 2 * Math.cos(Math.PI / n)) ** 0.5
+    s += p + 'A' + [r,r,0,0,0]
+  }
+  return s += '0,1&gt;'
+}
+</code></pre>
+</div>
+<div id="pu1" class="pu"><h1><a href="https://scratch.mit.edu/" rel="nofollow noreferrer">Scratch 3.23.1</a>, <s>160</s> 145 bytes</h1>
 <ul>
 <li>thanks to noodle person for syntax correction &amp; golfing</li>
 </ul>
@@ -52,32 +78,6 @@ turn cw(1)degrees
 </code></pre>
 <p>A program that inputs <span class="math-container">\$n\$</span> - a number of sides and plots a Reuleux polygon of <span class="math-container">\$n\$</span> sides. Radius length is fixed.</p>
 <p><a href="https://i.sstatic.net/Lmswtgdr.gif" rel="nofollow noreferrer"><img src="https://i.sstatic.net/Lmswtgdr.gif" alt="enter image description here" /></a></p>
-</div>
-<div id="pu1" class="pu"><h2>Javascript, <s>154</s> 147 bytes</h2>
-<p>A function returning a string containing an SVG for inline insertion into a HTML page.</p>
-<p>2 bytes less due to changed count.<br />
-5 byte saved thx to hints by @noodle person and @Neil.</p>
-<p><div class="snippet" data-lang="js" data-hide="false" data-console="true" data-babel="false">
-<div class="snippet-code">
-<pre class="snippet-code-js lang-js prettyprint-override"><code>f=
-n=&gt;`&lt;svg viewBox=-4,-1,9,2&gt;&lt;path d=M${[...Array(n)].map((_,i)=&gt;[(M=Math).sin(a=2*i*M.PI/n),M.cos(a)]+'A'+[r=(2+2*M.cos(M.PI/n))**.5,r,0,0,0])}0,1&gt;`</code></pre>
-<pre class="snippet-code-html lang-html prettyprint-override"><code>&lt;input type=number size=2 min=3 step=2 oninput=w.setHTMLUnsafe(f(value|0))&gt;&lt;div id=w&gt;</code></pre>
-</div>
-</div>
-</p>
-<h3>Ungolfed</h3>
-<pre><code>f = n =&gt; {
-  b = Math.PI / n
-  s = '&lt;svg viewBox=-4,-1,9,2&gt;&lt;path d=M'
-  s += [...(Array(n)].map((_, i) =&gt; {
-    a = 2 * i * b
-    p = [Math.sin(a), Math.cos(a)]
-    r = (2 + 2 * Math.cos(b)) ** 0.5
-    return p + 'A' + [r,r] + ',0,00'
-  })
-  return s += '0,1&gt;'
-}
-</code></pre>
 </div>
 <div id="pu2" class="pu"><h2>Logo, <s>61</s> 60 bytes</h2>
 <pre><code>to r:n
