--- a/q/64140.html
+++ b/q/64140.html
@@ -158,7 +158,7 @@ plot '-' with boxes fill solid fillcolor rgb variable
 end
 </code></pre>
 <p>To try it online copy and paste the code here: <a href="https://gnuplot.io/" rel="nofollow noreferrer">gnuplot.io</a></p>
-<p>The line <code>set size ratio -2</code> was copied from <a href="https://codegolf.stackexchange.com/a/224206/101276">the gnuplot answer</a> to golf the Bangladesh flag.</p>
+<p>The line <code>set size ratio -2</code> was copied from <a href="https://codegolf.stackexchange.com/a/224206/101276">the gnuplot answer</a> to the Bangladesh flag challenge.</p>
 <p><a href="https://i.sstatic.net/A2giLqt8.png" rel="nofollow noreferrer"><img src="https://i.sstatic.net/A2giLqt8.png" alt="flag of France" /></a></p>
 </div>
 <div id="pu1" class="pu"><h1>JSL, <s>122</s> 115 bytes</h1>
